# Viergewinnt

./: CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.win  Settings.json  Viergewinnt  Viergewinnt_Steuerung.dev  Viergewinnt_Steuerung.layout  cmake_install.cmake  json_reader_writer.hpp  main  main.cpp  menu.hpp
src/: Settings.json  connect-four_solver.hpp  json_reader_writer.hpp  main.cpp  menu.hpp  mux cout.txt  setup.hpp  solver_py.cpp
